tests/ui/associated-type-bounds/return-type-notation/bare-path.stderr
warning: the feature `return_type_notation` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/bare-path.rs:1:12
   |
LL | #![feature(return_type_notation)]
   |            ^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #109417 <https://github.com/rust-lang/rust/issues/109417> for more information
   = note: `#[warn(incomplete_features)]` on by default

error: return type notation not allowed in this position yet
  --> $DIR/bare-path.rs:15:23
   |
LL |     let _ = T::CONST::(..);
   |                       ^^^^

error: return type notation not allowed in this position yet
  --> $DIR/bare-path.rs:17:12
   |
LL |     let _: T::method(..);
   |            ^^^^^^^^^^^^^

error: aborting due to 2 previous errors; 1 warning emitted

